[package]
name = "asstlane"
version = "0.1.0"
edition = "2021"
default-run = "asstlane"

[dependencies]
foldhash = "0.1.3"
hashbrown = { version = "0.15.0", features = ["default-hasher", "serde"] }
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"

[[bin]]
name = "add"
